--- a/docs/compat/1.md
+++ b/docs/compat/1.md
@@ -21,3 +21,25 @@
   </script>
 ```
 
+### new Date 问题
+  - 原因：
+    在项目中，对时间进行排序，sort方法，在chrome下是正常的， 在ie11中不正常，找原因。   
+  - 解决方法
+    ie11 对new Date的时候 ，字符串中YYYY-MM-DD 会返回NAN，应该要用YYYY/MM/DD.
+    <strong>是不是觉得很坑啊</strong>
+  
+  ```js
+  var quickSort(arr, startDate, endDate){
+    if(arr.length <=1) return arr;
+    arr.sort((a, b) => {
+      if(a[startDate] === b[startDate]){
+        return new Date(b[endDate].replace(/-/g, '/')) - new Date(a[endDate].replace(/-/g, '/'))
+         //IE11会出错，返回NAN
+        return new Date(b[endDate]) - new Date(a[endDate])         
+      } else {
+        return new Date(b[startDate].replace(/-/g, '/')) - new Date(a[startDate].replace(/-/g, '/'))
+      }
+    })
+  }
+
+  ```
