--- a/docs/pains/201805.md
+++ b/docs/pains/201805.md
@@ -2,3 +2,16 @@
 
 痛点是什么？
 每月都找几个实现
+
+- 手写inherit函数
+- 手写throttle函数
+- 手写事件委托函数
+```js
+function delegate(parent, selector, handle) {}
+```
+- 实现repeat函数
+- webpack插件
+- 设计模式
+- 设计一个dialog组件
+- 手写Array.prototype.trim函数
+- css 单行截取 多行截取
