--- a/docs/compat/1.md
+++ b/docs/compat/1.md
@@ -43,3 +43,23 @@
   }
 
   ```
+  ### 多张图片一行滚动，flex布局，华为手机失效
+  - 原因： 华为努比亚手机不支持超出屏幕外的元素
+  - 解决方法： 使用position：relative,absolute,float
+  ```html
+    .wrapper{
+      position: relative;
+      overflow-x:auto;
+      overflow-y:hidden;
+      .container{
+        position:absolute;
+        top:0;
+        left:0;
+        right:0;
+        bottom:0;
+        height: 200px
+        width:100%;
+      }
+    }
+
+  ````
