--- a/docs/pains/201805.md
+++ b/docs/pains/201805.md
@@ -7,7 +7,8 @@
 
 痛点是什么？
 每月都找几个实现
-
+- promise实现
+- dns-prefetch 在link中不是在meta中 rel='dns-prefetch' content='www.xxx.cn'
 - 手写inherit函数
 - 手写throttle函数
 - 手写事件委托函数
